# ComputerGraphicsProject

./: .gitignore
shaders/EDAF80/: phong.frag  phong.vert  skybox.frag  skybox.vert  water.frag  water.vert
shaders/EDAN35/: accumulate_lights.frag  fill_gbuffer.frag  particle.frag  particle.vert  particleGPT.frag  particleGPT.vert
src/EDAF80/: CelestialBody.cpp  assignment1.cpp  assignment2.cpp  assignment3.cpp  assignment4.cpp  assignment5.cpp  interpolation.cpp  parametric_shapes.cpp  parametric_shapes.hpp
src/EDAN35/: CMakeLists.txt  ParticleSystem.cpp  ParticleSystem.hpp  assignment2.cpp  snowproject.cpp  snowproject.hpp
src/core/: helpers.cpp
